# form-filler

./: LICENSE  README.md  pyproject.toml
demo/: form.html
specifications/: example.yaml
src/: form-filler.py  generators.py  schema.py
tests/: test_generators.py  test_schema_validation.py
